@@ -67,9 +67,9 @@ struct _GServer
 };
 
 
-GServer*  gnet_server_new (GInetAddr* iface, 
-			   gint port, gboolean force_port, 
+GServer*  gnet_server_new (const GInetAddr* iface, gboolean force_port, 
 			   GServerFunc func, gpointer user_data);
+
 void      gnet_server_delete (GServer* server);
 
 
