@@ -1,3 +1,8 @@
+Wed Apr 25 14:27:26 2001  David Helder  <dhelder@umich.edu>
+
+	* src/server.[hc] (gnet_server_new): Changed prototype
+	   so port not included.  Now uses new_interface
+
 Tue Apr 24 15:10:19 2001  David Helder  <dhelder@umich.edu>
 
 	* src/md5.c (gnet_md5_get_digest): Added cast to 
